experiement_output/error_log/nondex-forest-code-spring_study_hyunsoo:spring-boot-journal-mongodb.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:24: error: cannot find symbol
			log.info("> 기존 데이터 삭제...");
			^
  symbol:   variable log
  location: class SimpleMongoAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:27: error: cannot find symbol
			log.info("> 데이터를 새로 생성...");
			^
  symbol:   variable log
  location: class SimpleMongoAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:28: error: cannot find symbol
			repo.save(Journal.builder()
			                 ^
  symbol:   method builder()
  location: class Journal
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:33: error: cannot find symbol
	        repo.save(Journal.builder()
	                         ^
  symbol:   method builder()
  location: class Journal
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:38: error: cannot find symbol
	        repo.save(Journal.builder()
	                         ^
  symbol:   method builder()
  location: class Journal
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:43: error: cannot find symbol
	        repo.save(Journal.builder()
	                         ^
  symbol:   method builder()
  location: class Journal
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:49: error: cannot find symbol
	        log.info("> 전체 데이터 조회...");
	        ^
  symbol:   variable log
  location: class SimpleMongoAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:50: error: cannot find symbol
	        repo.findAll().forEach(entry -> log.info(entry.toString()));
	                                        ^
  symbol:   variable log
  location: class SimpleMongoAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:52: error: cannot find symbol
	        log.info("> LIKE로 데이터 조회...");
	        ^
  symbol:   variable log
  location: class SimpleMongoAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-mongodb/src/main/java/com/spring/boot/journal/SimpleMongoAppApplication.java:53: error: cannot find symbol
	        repo.findByTitleLike("클라우드").forEach(entry -> log.info(entry.toString()));
	                                                      ^
  symbol:   variable log
  location: class SimpleMongoAppApplication
10 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-boot-journal-mongodb:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 3s
